# rsshogi

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile  pyproject.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  nightly-unsafe.yml  python-release.yml  rust-release.yml
crates/rsshogi/: Cargo.toml  README.md  build.rs
crates/rsshogi-py/: Cargo.toml  LICENSE  README-avx2.md  README.md  pyproject-avx2.toml  pyproject.toml
crates/rsshogi-py/python/rsshogi/: __init__.py  book.py  book.pyi  core.py  core.pyi  initial_positions.py  numpy.py  numpy.pyi  policy.py  policy.pyi  record.py  record.pyi  sazpack.py  sazpack.pyi  svg.py  svg.pyi  types.py  types.pyi  usi.py  usi.pyi
crates/rsshogi-py/src/: book.rs  dtype.rs  lib.rs  pack.rs  policy.rs  python_types.rs  sazpack.rs
crates/rsshogi/benches/: apply_undo.rs  movegen.rs
crates/rsshogi/examples/: sazpack_measure.rs  sbinpack_size_breakdown.rs
crates/rsshogi/src/: lib.rs
crates/rsshogi/src/board/: attack_tables.rs  bitboard256.rs  bitboard_set.rs  initial_positions.rs  lookup.rs  mate_constant.rs  mod.rs  move_list.rs  parser.rs  perft.rs  state_info.rs  test_support.rs  zobrist.rs
crates/rsshogi/src/board/attack_tables/tests/: mod.rs
crates/rsshogi/src/board/movegen/: checks.rs  drops.rs  evasions.rs  generate.rs  mod.rs  pieces.rs  promotions.rs  recaptures.rs  types.rs
crates/rsshogi/src/board/movegen/tests/: basic.rs  checks_move32.rs  drops.rs  evasions.rs  is_legal.rs  mod.rs  piece_moves.rs  pinned.rs  promoted_pieces.rs  promotion_rules.rs  recaptures.rs  slider_moves.rs
crates/rsshogi/src/board/position/: accessors.rs  attacks.rs  bit_io.rs  cache.rs  constructors.rs  hash.rs  huffman_coded_pos.rs  legality.rs  maintenance.rs  mod.rs  packed_sfen.rs  parser.rs  rules.rs  svg.rs  types.rs  updates.rs  validation.rs
crates/rsshogi/src/board/position/tests/: attacks.rs  basics.rs  cache_view.rs  carry_over.rs  helpers.rs  huffman_coded_pos.rs  mod.rs  packed_sfen.rs  roundtrip.rs  search_substrate.rs  sfen_parsing.rs  undo.rs  validation.rs  zobrist.rs
crates/rsshogi/src/board/position/tests/rules/: declaration_win.rs  discovered_checks.rs  drops.rs  mod.rs  repetition.rs  split_legality.rs
crates/rsshogi/src/board/state_info/tests/: mod.rs
crates/rsshogi/src/board/tests/: yaneuraou_compat.rs
crates/rsshogi/src/book/: builder.rs  control.rs  database.rs  error.rs  memory.rs  mod.rs  sbk.rs  solver.rs  static_book.rs  types.rs  writer.rs  yaneuraou.rs  ybb.rs
crates/rsshogi/src/labels/: mod.rs  policy.rs
crates/rsshogi/src/mate/: mod.rs  table.rs
crates/rsshogi/src/records/: error.rs  mod.rs  record.rs  time_control.rs
crates/rsshogi/src/records/formats/: common.rs  csa.rs  hcpe.rs  jkf.rs  kif.rs  mod.rs  pack.rs  sazpack.rs  sazpack_selfplay.rs  sbinpack.rs  sfen.rs  traversal.rs  usi.rs
crates/rsshogi/src/records/formats/kif/: bytes.rs  error.rs
crates/rsshogi/src/simd/: u64x2_ops.rs
crates/rsshogi/src/simd/u64x4/: avx2.rs
crates/rsshogi/src/types/: bitboard.rs  color.rs  entering_king_rule.rs  eval.rs  file.rs  game_result.rs  hand.rs  mod.rs  moves.rs  piece.rs  rank.rs  repetition_state.rs  square.rs
crates/rsshogi/src/types/bitboard/tests/: mod.rs
crates/rsshogi/tests/: hash_primitives.rs  movegen_integration.rs  movegen_pinned_pieces.rs  perft.rs  property_apply_move.proptest-regressions  property_apply_move.rs  yaneu_compatibility.rs
crates/rsshogi/tests/test_data/: README.md  perft_results.txt
crates/rsshogi/tests/test_data/pack/: sample.pack
docs/book/: book.toml
docs/book/src/: SUMMARY.md  architecture.md  introduction.md  references.md
docs/book/src/assets/: bitboard-index.js  shogi-board.js  shogi-board.ts
docs/book/src/getting-started/: examples.md  installation.md  quickstart.md
docs/book/src/internals/: index.md
docs/book/src/internals/bitboard/: attacks.md  index.md  layout.md  operations.md  slider-survey.md
docs/book/src/internals/mate/: index.md
docs/book/src/internals/movegen/: index.md  special-rules.md
docs/book/src/internals/optimization/: index.md
docs/book/src/internals/position/: index.md  search-integration.md  state-management.md  zobrist.md
docs/book/src/internals/serialization/: compression.md  formats.md  index.md
docs/book/src/internals/simd/: history.md  index.md  instructions.md
docs/book/src/internals/types/: coordinates.md  index.md  moves.md  pieces.md  policy-labels.md
docs/book/src/python/: apery.md  board.md  book.md  external-books.md  game_result.md  index.md  initial_positions.md  move.md  move32.md  numpy.md  parser.md  policy.md  record.md  svg.md  types.md  usi.md
docs/book/src/reference/: compat.md  faq.md  records.md  sazpack.md  sbinpack.md
docs/book/src/reference/formats/: book-architecture.md  book.md  csa.md  external-books.md  index.md  jkf.md  ki2.md  kif.md  sbk.md  training-binaries.md  yaneuraou.md
docs/book/theme/: custom.css
examples/python/: basic.py  board_moves.py  move_roundtrip.py  push_pop.py  sequence.py  sfen_load.py  structured_imports.py
examples/rust/: sfen_roundtrip.rs
scripts/: check_public_export.ps1  export_public_snapshot.ps1
scripts/windows/: check-env.ps1  clean.ps1  profile-uprof.ps1  setup-native.ps1  test-rust.ps1
tests/python/: test_board_basic.py  test_book.py  test_initial_positions.py  test_move_to_ki2.py  test_numpy_dtypes.py  test_pack.py  test_policy.py  test_record_editing.py  test_sazpack.py  test_usi_protocol.py  typecheck_record_api.py
