[project]
name = "rsshogi-workspace"
version = "0.0.0"
description = "Tooling configuration for the rsshogi workspace."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsshogi contributors" }]
dependencies = []

[dependency-groups]
dev = [
  "maturin",
  "numpy",
  "pytest>=8.4.2",
  "ruff",
  "ty",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["target", ".venv", "dist", "build"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
