[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "rsshogi"
version = "1.0.0"
description = "Python tools for shogi board handling, move legality, records, and training-data formats."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Hiroki Taniai" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = { "Repository" = "https://github.com/nyoki-mtl/rsshogi" }

[tool.maturin]
module-name = "rsshogi._rsshogi"
python-source = "python"
